Fixed title alignment

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ a:active, a:visited {
 
 header {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
   background-color: black;
   color: white;
@@ -22,26 +21,25 @@ header {
 }
   .header-nav {
     display: flex;
-    margin-right: auto;
     margin-left: 1em;
     text-transform: uppercase;
     gap: 1em;
+    margin-right: auto;
   }
   .header-logo {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     text-align: center;
-    margin: 0 auto;
+    width: 200px;
+    margin-right: 220px;
   }
   .header-search {
     display: flex;
-    margin-left: auto;
     margin-right: 1em;
+    margin-left: auto;
+    justify-self: right;
   }
-  #logo {
-    margin: 0 auto;
-  }
+
 
 /* Shop Links Section */
 
